<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/item_settings"
        android:orderInCategory="100"
        android:title="@string/settings" />

    <item
        android:id="@+id/item_profile"
        android:orderInCategory="200"
        android:title="@string/myProfile" />

    <item
        android:id="@+id/item_your_level"
        android:orderInCategory="300"
        android:title="@string/your_level">

    </item>

    <item
        android:id="@+id/app_settings"
        android:icon="@drawable/icon_settings"
        android:orderInCategory="100"
        android:title="app settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/arrow_back"
        android:icon="@drawable/arrow_back"
        android:orderInCategory="100"
        android:title="@string/arrow_back"
        app:showAsAction="always" />

</menu>