<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/keyboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_yes_or_no_for_the_facts_below"
        android:textColor="@color/secondQuestionText_background"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/typing_means_pressing_random_buttons_on_the_keyboard"
        android:textColor="@color/secondQuestionText_background"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/input_answer"
        app:layout_constraintStart_toStartOf="@id/title" />

    <EditText
        android:id="@+id/input_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/type_yes_or_no"
        android:hint="@string/type_yes_or_no"
        android:inputType="text"
        android:textColorHint="@color/secondQuestionText_background"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/submitBtn" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#40D677"
        android:text="@string/submit_your_answer"
        app:layout_constraintBottom_toTopOf="@id/baitForBottomNav"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/baitForBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>